rust/test/former/all/hashmap_without_parameter.stderr
error: Expects at least two parameters here:
         HashMap < i32 >
  --> ../../../rust/test/former/all/hashmap_without_parameter.rs:15:24
   |
15 |   pub string_slice_1 : HashMap< i32 >,
   |                        ^^^^^^^^^^^^^^
